# Game-Framework

./: .gitignore  CMakeLists.txt  README.md  README.txt  clean.bash  compile.cmake  compileAndRun.bash  eventHandler.h  executable.out  gameSound.h  initializer.h  main.cpp  miscellaneous.cpp  miscellaneous.h  textureManager.h
UnitTests/: CMakeLists.txt  compileAndRunUnitTests.bash  miscellaneous_test.cpp  miscellaneous_test.h  spriteSchematic_test.h  testHarness.cpp
